--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Pixel</title>
+    <link rel="icon" type="image/png" href="favicon.ico"/>
   </head>
   <body>
     <script src="index.ts"></script>
